[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylua"
version = "5.3.6"
description = "A Python implementation of Lua 5.3.6 virtual machine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "aixiasang"}
]
keywords = ["lua", "compiler", "virtual-machine", "bytecode", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pylua = "pylua.cli:main"

[project.urls]
Homepage = "https://github.com/aixiasang/pylua"
Documentation = "https://github.com/aixiasang/pylua#readme"
Repository = "https://github.com/aixiasang/pylua"
Issues = "https://github.com/aixiasang/pylua/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pylua*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
